@@ -1,89 +1,0 @@
-                                Release Summary
-
-                      certified-asterisk-1.8.15-cert1-rc2
-
-                                Date: 2012-11-19
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes new features. For a list of new features that have
-   been included with this release, please see the CHANGES file inside the
-   source package. Since this is new major release, users are encouraged to
-   do extended testing before upgrading to this version in a production
-   environment.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, certified-asterisk-1.8.15-cert1-rc1.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   2 bebuild                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 376502   | bebuild | Create 1.8.15-cert1-rc2       |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 376503   | bebuild | Merge changes for             |                   |
-   |          |         | 1.8.15-cert1-rc2              |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                                         |    2
- ChangeLog                                        |   31 ++
- apps/app_queue.c                                 |    1
- apps/app_senddtmf.c                              |   63 +++--
- certified-asterisk-1.8.15-cert1-rc1-summary.html |  152 --------------
- certified-asterisk-1.8.15-cert1-rc1-summary.txt  |  243 -----------------------
- res/res_rtp_asterisk.c                           |   10
- 7 files changed, 76 insertions(+), 426 deletions(-)
-
-     ----------------------------------------------------------------------
