@@ -1,4 +1,8 @@
-2012-11-19   Asterisk Development Team <asteriskteam@digium.com>
+2012-12-03  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 1.8.15-cert1 Released.
+
+2012-11-19  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 1.8.15-cert1-rc2 Released.
 
